UtahLiveDataTest/src/objects/FINETVCUSTADD__c.object
<CustomObject>
    <description>This is FINET Vendor address object</description>
    <fields>
        <fullName>AddressID__c</fullName>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FINETVCUST__c</fullName>
        <label>FINETVCUST</label>
        <referenceTo>FINETVCUST__c</referenceTo>
        <relationshipLabel>FINETVCUSTADD</relationshipLabel>
        <relationshipName>VCUSTADD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VendorAddressID__c</fullName>
        <label>Vendor Address ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ad_typ__c</fullName>
        <label>AddressType</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city_nm__c</fullName>
        <label>City Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ctry__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prin_cntac__c</fullName>
        <description>Exact field name from the FINET table</description>
        <label>Primary contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>st__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>str_1_nm__c</fullName>
        <label>Street 1 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>str_2_nm__c</fullName>
        <label>Street 2 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>voice_ph_no__c</fullName>
        <label>Phone Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip__c</fullName>
        <label>ZIP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>FINETVCUSTADD</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Address GG ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FINETVCUSTADD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>